--- a/css/style.css
+++ b/css/style.css
@@ -201,12 +201,12 @@
     content: "";
     width: 0;
     height: 100%;
+    border: 5px solid rgb(0, 0, 133);
     top: 0;
     left: 0;
-    background: rgba(156, 143, 210, 0.85);
+    background: rgba(192, 6, 111, 0.85);
     transition: .5s;
 }
-
 .team-item .team-img::after {
     left: auto;
     right: 0;
@@ -214,7 +214,7 @@
 
 .team-item:hover .team-img::before,
 .team-item:hover .team-img::after {
-    width: 50%;
+    width: 25%;
 }
 
 .team-item .team-img .team-social {
@@ -273,8 +273,8 @@
 }
 
 .testimonial-carousel .owl-dots .owl-dot.active {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 110px;
 }
 
 .testimonial-carousel .owl-dots .owl-dot img {
@@ -327,19 +327,6 @@
 .footer .copyright a:hover {
     color: var(--primary);
 }
-
-#multicon{
-    width: 400px;
-    height: 300px;
-}
-
-
-#resume{
-    width: 400px;
-    height: 340px;
-}
-
-
 #sakshi{
     width: 100%;
     height: 200px;
@@ -371,8 +358,58 @@
     width: 100%;
     height: 275px;
 }
-
+#neha{
+    width:100%;
+    height:275px;
+} 
+#core{
+    width: 100%;
+    height: 200px;
+}
+#anurag{
+    width: 100%;
+    height: 200px;
+}
 .height{
-    height: 430px;
+    height: 485px;
+}
+#zephyr{
+    width: 100%;
+    height: 275px;
+}
+#fiesta{
+    width: 100%;
+    height: 275px;
+}
+#stem{
+    width: 100%;
+    height: 275px;
+}
+#workshopc{
+    width: 100%;
+    height: 275px;
+}
+#resume{
+    width: 100%;
+    height: 275px;
+}
+#multicon{
+    width: 100%;
+    height: 275px;
+}
+#talent{
+    width: 100%;
+    height: 275px;
+}
+#tour{
+    width: 100%;
+    height: 275px;
 }
 
+.image-container {
+   width: 100%;
+   height: auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
