--- a/css/style.css
+++ b/css/style.css
@@ -413,3 +413,13 @@
    justify-content: center;
    align-items: center;
 }
+#pratik
+{
+    width: 100%;
+    height: 200px;  
+}
+#mukund
+{
+    width: 100%;
+    height: 200px;  
+}
