--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@
 }
 
 
+
 /*** Navbar ***/
 .navbar .dropdown-toggle::after {
     border: none;
@@ -413,6 +414,29 @@
    justify-content: center;
    align-items: center;
 }
+@media screen and (prefers-color-scheme: light) {
+    body {
+        background-color: rgb(197, 185, 214);
+        color: #000000;
+   }
+    .dark-mode {
+        background-color: #000000;
+        color: white;
+   }
+}
+.smooth-transition {
+    transition: background-color 300ms;
+}
+@media screen and (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(255, 255, 255);
+        color: #040316;
+   }
+    .dark-mode {
+        background-color: white;
+        color: #0d1117;
+   }
+}
 #pratik
 {
     width: 100%;
@@ -423,3 +447,9 @@
     width: 100%;
     height: 200px;  
 }
+.dark-mode {
+    background-color: #000000;
+    color: #fff;
+    /* Add other styling for dark mode */
+  }
+  
